# voice-ai-tutor

./: .env.example  .gitignore  Makefile  PROMPT.md  README.md  architecture.md  docker-compose.yml  workflow.md
backend/: Dockerfile  pyproject.toml
backend/curriculum/: exercise.yaml
backend/src/backend/: __init__.py  app.py  config.py  curriculum.py  models.py  srs.py  store.py  tokens.py
backend/tests/: conftest.py  test_api.py  test_curriculum.py  test_srs.py  test_store.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/practice/: page.tsx
frontend/components/: ErrorBanner.tsx  FlashcardExercise.tsx  PracticeRoom.tsx  PushToTalk.tsx  Session.tsx  Spinner.tsx  Transcript.tsx
frontend/lib/: api.ts  languages.ts  progress.test.ts  progress.ts  tutorEvents.ts  useTutorEvents.test.ts  useTutorEvents.ts
frontend/public/flashcards/: README.md
livekit/: livekit.yaml
scripts/: functional_test.py
voice/: Dockerfile  pyproject.toml
voice/src/voice/: __init__.py  agent.py  backend_client.py  config.py  pipeline.py  prompts.py  tutor.py  ui_events.py
