[project]
name = "voice-tutor-agent"
version = "0.1.0"
description = "LiveKit voice agent for the Spanish tutor (conversation + AI pipeline layers)."
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=1.6,<2",
    "livekit-plugins-deepgram>=1.6",
    "livekit-plugins-anthropic>=1.6",
    "livekit-plugins-cartesia>=1.6",
    "livekit-plugins-openai>=1.6",
    "livekit-plugins-silero>=1.6",
    "livekit-plugins-turn-detector>=1.6",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice"]
